fix: increase width of article header, so it doesnt wrap.

--- a/src/pages/Shop/CardDetail/CardDetail.module.css
+++ b/src/pages/Shop/CardDetail/CardDetail.module.css
@@ -205,7 +205,7 @@ form {
   .articleHeader {
     top: -35px;
     left: 50%;
-    width: 100%;
+    width: 110%;
     transform: translateX(-50%);
     text-align: center;
     font-size: 21px;
